--- a/src/styles/AdminLayout.module.css
+++ b/src/styles/AdminLayout.module.css
@@ -393,7 +393,7 @@
     justify-content: center;
   }
   .container {
-    background-color: #353535;
+    background-color: #FFF;
   }
 }
 
